# CaliPPer

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
MCBPE/: __init__.py  eval_mcbpe_hybrid.py  mcbpe_core.py
PAPE/: __init__.py  pape_core.py
Scripts/data_preprocess/: 00_denoise_10x.py  01_merge_databases.py  02_cluster_and_fold.py  03_assign_features.py  04_export_jq_format.py  README.md  pyproject.toml  requirements.txt  run_all.sh
calipper/: __init__.py  combine_first_helpers.py  core.py  general_evaluator.py  pattern_analysis.py  pluggable_distance.py  report_generator.py  statistical_analysis.py  utils.py  visualization.py
docs/data_provenance/fig6/: PROVENANCE.md  bigmhc_inventory.md  deepantigen_inventory.md  panpep_inventory.md  xbcr_inventory.md
models/atm_tcr/: data_loader.py  main.py  torchtext_legacy_compat.py
models/blosum_rf/: blosum_rf.py
models/ergo_ii/: ergo_lstm.py
models/mint/: README.md  stringdb.py
models/nettcr/: nettcr.py  nettcr_architectures.py
models/retrospective/deepantigen/: LICENSE  environment.yml  main.py  setup.cfg  setup.py
models/retrospective/xbcr_net_retrospective/: README.md
models/tcr_bert/: tcrbert_svm.py
models/xbcr_net/: infer_rbd.py  infer_rbd_600.py  main_infer.py  main_train.py  pred_save.py  train_rbd.py  train_rbd_600.py  utils.py
reproduce/: download_data.sh  prepare_fig6_data.sh  reproduce.sh  reproduce_fig2.sh  reproduce_fig3.sh  reproduce_fig4.sh  reproduce_fig5.sh  reproduce_fig6.sh  retrain_fig3_inputs.sh  verify.sh  verify_environment.sh
reproduce/data/cached_predictions/: MANIFEST.tsv
reproduce/data/reference/: fig6_values.csv
reproduce/scripts/: PANEL_MANIFEST_original.md  _paths.py  assemble_figures.py  compute_fig2_levlog_distances.py  dist_config.py  fig2.py  fig2_ct_correlations.py  fig3.py  fig4.py  fig5.py  fig6.py  precompute_blosum_sqrt_distances.py  recovery_attempt_atm_tcr_pre_retrain.py  style_config.py
reproduce/scripts/data_prep/: common.py  prep_fig6_antibioticsai.py  prep_fig6_bigmhc.py  prep_fig6_deepantigen.py  prep_fig6_panpep.py  prep_fig6_xbcr.py
reproduce/scripts/fig2/: cache_bcr_fig2_data.py  compute_bcr_blosum_heavy_naive.py  compute_bcr_esm2_heavy_naive.py  compute_bcr_esm2_s2dd.py  compute_blosum_naive_lengthctrl.py  compute_tcrdist_cdr3_naive.py  gen_cross_model_consistency_cv.py  gen_distance_comparison_cv.py  gen_distance_comparison_cv_with_naive.py  gen_sankey.py  generate_all_panels.py
reproduce/scripts/fig3/: cache_bcr_fig3_fig4_data.py  compute_dataset_level_3method.py  generate_all_bcr_models_ct.py  generate_cv_scatter_pooled.py  generate_method_comparison_boxplot.py  generate_prediction_error_heatmaps.py  generate_remaining_panels.py  generate_subset_heatmaps_fig4.py  generate_tcr_ct_v27.py  generate_workflow_schematic.py
reproduce/scripts/fig4/: audit_baseline_comparison_128.py  audit_bcr_baseline_comparison.py  audit_uniform_vs_sigmaC.py  cache_bcr_fig4_fold4cal.py  cache_tcr_fig4_v27_predictions.py  derive_bcr_cache_from_audit.py  gen_fig4_error_scatter_and_consistency.py  gen_fig4_heatmaps_reordered.py  gen_fig4_unique_scatter.py  generate_fig4_bcr_method_comparison_boxplots.py  generate_fig4_bcr_scatter_panels.py  generate_fig4_method_comparison_boxplots.py  generate_fig4_scatter_panels.py
reproduce/scripts/fig5/: extract_fig5_tcr_panels.py  (+15 more)
(+273 files in other folders)
