[project]
name = "s2dd-data-preprocess"
version = "0.1.0"
description = "Data preprocessing pipeline for S2DD TCR-pMHC binding prediction training data"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "numpy>=2.0",
    "pandas>=2.0",
    "pyrepseq>=1.5",
    "python-igraph>=0.11",
    "leidenalg>=0.10",
    "scikit-learn>=1.4",
    "tidytcells>=2.1,<2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
bypass-selection = true
